--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-25 22:15:19
+lastsearch = 2024-07-26 00:33:15
 
 [shopee.vn]
 match = -13.8%%
@@ -19,7 +19,7 @@ url = https://www.maihuyencorp.com/
 [www.lazada.vn]
 match = -31.0%%
 title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html?srsltid=AfmBOorKpV9hAOE7vOtIp8AXxERxQhSp6R7MQJRwNWyiH59JS8W2xUww
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [tiki.vn]
 match = -13.8%%
