--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-25 23:42:39
+lastsearch = 2024-07-26 00:35:43
 
 [gobearcats.com]
 match = -142.1%%
@@ -59,7 +59,7 @@ url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -182,9 +182,9 @@ title = 2024 Fall Quarter/ Fall Semester Academic Calendar (All ...
 url = https://search.uconline.edu/docs/academic-calendar.pdf
 
 [www.dir.ca.gov]
-match = -21.4%%
-title = Lien Claimants
-url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -142.1%%
@@ -402,8 +402,8 @@ title =
 url = https://www.kitv.com/news/three-hawaii-students-among-2024-us-presidential-scholars/article_19f7c2aa-0e4b-11ef-866d-5b13c23c3e1a.html
 
 [voces8.com]
-match = -84.2%%
-title = See us Live — VOCES8 - A Choral Ensemble
+match = -100.0%%
+title = Concerts
 url = https://voces8.com/concerts
 
 [www.dhcs.ca.gov]
