--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-25 23:50:42
+lastsearch = 2024-07-26 00:54:55
 
 [www.lazada.vn]
 match = -212.5%%
 title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn Định ...
-url = https://www.lazada.vn/products/2023-tui-ngu-cho-be-mau-xuan-thu-dong-nhiet-do-on-dinh-cotton-nguyen-chat-bon-mua-thong-dung-cho-be-so-sinh-chong-da-chan-bong-chia-doi-chan-tui-ngu-cho-be-i2412995900.html
+url = https://www.lazada.vn/products/2023-tui-ngu-cho-be-mau-xuan-thu-dong-nhiet-do-on-dinh-cotton-nguyen-chat-bon-mua-thong-dung-cho-be-so-sinh-chong-da-chan-bong-chia-doi-chan-tui-ngu-cho-be-i2412995900.html?srsltid=AfmBOor9GwQbc8_mH-4sB6550ygIk-BrDePxKtGkaC4nyVXOzcfqZZFD
 
 [shopee.vn]
-match = -206.2%%
-title = Túi Đựng Bút Hình Xe Tăng Sức Chứa Lớn Tiện Dụng Cho ...
-url = https://shopee.vn/Túi-Đựng-Bút-Hình-Xe-Tăng-Sức-Chứa-Lớn-Tiện-Dụng-Cho-Học-Sinh-i.600986218.23171442783
+match = -212.5%%
+title = Trò chơi thẻ để bàn Dream Sleepwalker Tacaro Witt Series ...
+url = https://shopee.vn/Trò-chơi-thẻ-để-bàn-Dream-Sleepwalker-Tacaro-Witt-Series-Warm-Dream-10.6-*-6.2-Phiên-bản-chính-hãng-i.992098593.28954099934
 
 [noveltoon.vn]
 match = -100.0%%
@@ -69,7 +69,7 @@ url = https://osnat.bandcamp.com/album/-
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOoq7u00BF41DfJ4s6EU6SGCjKdrmjMMFSAl0zuXvVobo1dLPhvex
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
