--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-25 22:54:08
+lastsearch = 2024-07-26 00:50:28
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -3.2%%
+title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html?srsltid=AfmBOoqrs9WH6Z6Z1Jg80C5Wxjw6oJHMEux3F750erJ4PWzF_7wUVT0f
+match = -12.9%%
+title = [HOT 2024] Top 20 chăn ga gối Singapore mà bạn không ...
+url = https://demxanh.com/top-20-chan-ga-goi-singapore-ma-ban-khong-the-bo-lo-nam-2020.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 203
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
+match = 53.8%%
+title = Bộ chăn ga gối SH_UT23 028
+url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-032
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -22.6%%
-title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
-url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
+match = 48.4%%
+title = Bộ chăn ga gối đệm giá bao nhiêu?
+url = https://changagoidemsonghong.online/bo-chan-ga-goi-dem-gia-bao-nhieu.html
 
 [www.facebook.com]
 match = -6.5%%
@@ -205,4 +205,9 @@ url = https://books.google.com/books?id=c08OwDdOilMC&pg=PA30-IA3&lpg=PA30-IA3&dq
 match = 51.6%%
 title = Bộ Chăn Ga Gối Cotton Sweet Love 18
 url = https://spacet.vn/shop/bo-chan-ga-goi-cotton-sweet-love-18-5193
+
+[demtot.com]
+match = -81.8%%
+title = Chăn Ga Gối
+url = https://demtot.com/chan-ga-goi/
 
