--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-25 23:36:18
+lastsearch = 2024-07-26 00:50:07
 
 [everon.online]
-match = -32.4%%
-title = 4 – Everon Tân Mai | Tổng Đại Lý Chăn Ga Gối Đệm Everon ...
-url = https://everon.online/blogs/video/4
+match = 50.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-23035 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est23035.html
+title = Everon EST-24035 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-est24035.html
 
 [nem.vn]
 match = 5.9%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 14.7%%
-title = Bộ Ga chun chăn chần Everon bốn mùa 4 chi tiết màu ...
-url = https://vuanem.com/bo-ga-chun-chan-chan-everon-EST23034.html
+match = 17.6%%
+title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
+url = https://vuanem.com/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet.html?srsltid=AfmBOopx4EruG6XIDdlQUhK8iwR4KTpDSIZW_8Z6gviJMsDEUIw6qb6L
 
 [everonvn.com.vn]
 match = -85.7%%
@@ -59,12 +59,12 @@ url = http://www.changagoidemeveron.vn/3/everon/chan-bon-mua-everon-lite-eve-01.
 [ninhouse.vn]
 match = -2.9%%
 title = [MÁT LẠNH] Bộ drap chăn ga gối đệm cotton 100%% ...
-url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
+url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton?srsltid=AfmBOooCkIzDeYAx_zKap6OySwDcL8F_rM3l1chDnUfvpAS33G5OL3Zt
 
 [jysk.vn]
 match = -26.5%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp | JYSK
-url = https://jysk.vn/ga-chun-140x200cm
+url = https://jysk.vn/ga-chun-140x200cm?srsltid=AfmBOorNlNMTJUkZDyA910DT-WljRm_jlP6NtWupLc_RkHmb2FwA3ZBM
 
 [anpha.vuanem.com]
 match = 0.0%%
