--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-25 23:01:30
+lastsearch = 2024-07-26 01:20:48
 
 [demxanh.com]
 match = 13.8%%
 title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html?srsltid=AfmBOop77leOxYsvlbZI0LriueTIptvSrKmVar4iVDrborJoLl0om69B
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = 51.7%%
-title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
+match = -17.2%%
+title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
 
 [changagoinemgiasi.com]
 match = 3.4%%
@@ -44,7 +44,7 @@ url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 [www.diepxuan.com]
 match = 62.1%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOoocNohmCLCLa9xoEHZ2CYyP9uA3Hil_dZOdjOl0bCxlusUSdCmY
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [www.facebook.com]
 match = 28.0%%
