--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-25 20:35:12
+lastsearch = 2024-07-26 01:31:33
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -12,8 +12,8 @@ title = Chan cocoo - Freelance (Self employed)
 url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -107.7%%
-title = Hoi Chan (@hoichandraws) - Instagram
+match = -230.8%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
