--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-25 23:54:32
+lastsearch = 2024-07-26 01:23:53
 
 [shopee.vn]
-match = -45.8%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = -41.7%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoo6doWG7qwbRJ0sLpqZ59iYYtedotj6QClx_-o0SlVbKXeobNOs
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [goni.vn]
 match = 4.2%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = -20.8%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOorq6Tkfq8tBu_BxvWkKoGWKW9QeC6dCxUcfZ2k8EebYuQfJh0J4
+match = 37.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [joliefam.vn]
 match = -37.5%%
