--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-25 21:30:43
+lastsearch = 2024-07-26 01:27:00
 
 [fsapartners.ed.gov]
 match = -45.0%%
 title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
+url = https://fsapartners.ed.gov/sites/default/files/2023-04/2324FedSchoolCodeListQ3.pdf
 
 [finaid.org]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -15.0%%
+title = Abraham Palmer - UCSD Profiles
+url = https://profiles.ucsd.edu/abraham.palmer
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 20.0%%
-title = Charles Chiu, MD, PhD
-url = https://profiles.ucsf.edu/charles.chiu
+match = 0.0%%
+title = Jennifer Puck, MD
+url = https://profiles.ucsf.edu/jennifer.puck
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = -38.5%%
-title = R Lor Randall
-url = https://profiles.ucdavis.edu/r.randall
+match = 0.0%%
+title = Merrill E Gershwin
+url = https://profiles.ucdavis.edu/merrill.gershwin
 
 [store.samhsa.gov]
 match = -60.0%%
