CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOooFPKkfRHvFXCOq5_n6Nqe_DIhOhWmbrBRIgDorjRogR-6fwCSl
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
