--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-25 21:40:34
+lastsearch = 2024-07-26 01:37:41
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -12,14 +12,14 @@ title = Chiếu lác
 url = https://www.diepxuan.com/chieu/chieu-lac.html?p=2
 
 [shopee.vn]
-match = 31.2%%
-title = Chiếu Lác Trắng Xếp Gọn
-url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+match = -206.2%%
+title = Thị trường tiêu dùng ngày 25-7-2024 | Thị trường tiêu dùng
+url = https://www.youtube.com/watch?v=rT3TGv6yJcM
 
 [hawater.com.vn]
 match = -75.0%%
@@ -62,9 +62,9 @@ title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
 url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
 
 [vnexpress.net]
-match = -162.5%%
-title = Game 'Kho báu biển xanh' trên MoMo có tổng quà 30 tỷ
-url = https://vnexpress.net/game-kho-bau-bien-xanh-tren-momo-co-tong-qua-30-ty-4771353.html
+match = -112.5%%
+title = Paris nỗ lực kiểm soát chuột trước Olympic
+url = https://vnexpress.net/paris-no-luc-kiem-soat-chuot-truoc-olympic-4773908.html
 
 [laodong.vn]
 match = -187.5%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -187.5%%
-title = Ánh Trăng Đêm Nay Thật Đẹp • 今晚月色真美
-url = https://www.facebook.com/story.php/?story_fbid=122160660896122203&id=61553666104275
+match = -8.3%%
+title = Mai Thanh Hạ
+url = https://www.facebook.com/maithanhha19/
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -532,9 +532,9 @@ title = Những người thợ của nghề truyền thống
 url = https://www.baobaclieu.vn/doi-song-xa-hoi/nhung-nguoi-tho-cua-nghe-truyen-thong-95803.html
 
 [www.baohoabinh.com.vn]
-match = -156.2%%
-title = Động đất 4.1 độ tại huyện Ngọc Lặc, tỉnh Thanh Hóa
-url = http://www.baohoabinh.com.vn/274/191464/Dong-dat-4.1-do-tai-huyen-Ngoc-Lac,-tinh-Thanh-Hoa.htm
+match = -175.0%%
+title = Bài 3 - Linh thiêng vùng đất lịch sử cách mạng Quảng Trị
+url = http://www.baohoabinh.com.vn/220/191601/Hanh-trinh-tim-ve-dia-chi-do-mien-Trung-Bai-3-Linh-thieng-vung-dat-lich-su-cach-mang-Quang-Tri.htm
 
 [caobangtv.vn]
 match = -187.5%%
@@ -542,9 +542,9 @@ title = Đảng viên, nhân dân quê hương Đông Anh tiếc thương ...
 url = http://caobangtv.vn/tin-tuc-n75200/dang-vien-nhan-dan-que-huong-dong-anh-tiec-thuong-nho-ve-tong-bi-thu-nguyen-phu-trong.html
 
 [langsontv.vn]
-match = -181.2%%
-title = Lạc vào "thiên đường mây" trên đồi cỏ đẹp như phim ở ...
-url = https://langsontv.vn/news/460/73111/lac-vao-thien-duong-may-tren-doi-co-dep-nhu-phim-o-cao-bang
+match = -200.0%%
+title = Lực lượng dân quân tự vệ giúp người dân phòng, chống ...
+url = https://langsontv.vn/news/459/73131/luc-luong-dan-quan-tu-ve-giup-nguoi-dan-phong-chong-thien-tai-trong-mua-mua-bao
 
 [nongnghiep.vn]
 match = -168.8%%
@@ -602,9 +602,9 @@ title = Xét xử đối tượng vận chuyển ma túy
 url = https://antv.gov.vn/phap-luat-3/kien-giang-ba-lan-cho-ma-tuy-thue-nhan-duoc-20-nam-tu-8FDFA73CD.html
 
 [baobacgiang.vn]
-match = -193.8%%
-title = Bàn giải pháp bảo tồn, phát huy giá trị Lễ hội Yên Thế
-url = https://baobacgiang.vn/ban-giai-phap-bao-ton-phat-huy-gia-tri-le-hoi-yen-the-190810.bbg
+match = -206.2%%
+title = Khẩn cấp khắc phục sự cố sạt lở bờ sông Thương tại Yên ...
+url = https://baobacgiang.vn/khan-cap-khac-phuc-su-co-sat-lo-bo-song-thuong-tai-yen-the-122832.bbg
 
 [www.lg.com]
 match = -206.2%%
