--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-25 23:49:18
+lastsearch = 2024-07-26 01:41:28
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = -17.9%%
-title = Trẻ bị vàng da chiếu đèn như nào mới hiệu quả?
-url = https://www.vinmec.com/vie/bai-viet/tre-bi-vang-da-chieu-den-nhu-nao-moi-hieu-qua-vi
+match = 0.0%%
+title = Chiếu đèn vàng da 15 phút có hiệu quả không?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi/
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = 7.1%%
-title = AHA giá mềm nhưng chất lượng siêu ổn áp
-url = https://m.facebook.com/groups/2045451282406040/posts/3384689645148857/
+match = -7.1%%
+title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
+url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -71.4%%
-title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
+match = -53.6%%
+title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
