--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-07-25 20:23:57
+lastsearch = 2024-07-26 01:37:02
 
 [shadow.vn]
 match = -140.0%%
@@ -14,7 +14,7 @@ url = https://shadow.vn/den-pin-chieu-xa-fenix-ht18r
 [chuyentactical.com]
 match = 0.0%%
 title = Đèn Pin Fenix - HT18R
-url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/?srsltid=AfmBOoqqVKS5nMfDQkQgUTo9WwWdTjDIA2zAabsZNaaEAkLz3_jb_nuM
+url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/
 
 [bisu.vn]
 match = -113.3%%
