--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 22:36:42
 lastsearch = 2024-07-26 01:32:15
 
 [shopee.vn]
-match = -90.9%%
-title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
-url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
+match = 9.1%%
+title = Chiếu cói 3m Đẹp Sang Chuẩn xịn
+url = https://shopee.vn/Chiếu-cói-3m-Đẹp-Sang-Chuẩn-xịn-i.18845103.22331826526
 
 [www.facebook.com]
 match = 36.4%%
