--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-25 23:19:07
+lastsearch = 2024-07-26 01:38:44
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -53.3%%
-title = Black Kingdom - D2 - Facebook
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -126.7%%
+title = Celadon Sports & Resort Club - Facebook
+url = https://www.facebook.com/CeladonSRC/photos/️chỉ-còn-2-buổi-tập-nữa-chương-trình-burn-it-up-mùa-2-sẽ-kết-thúcchương-trình-bu/3097734877138264/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -157,8 +157,8 @@ title = adz giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=.adz
 
 [www.vietnamairport.vn]
-match = -213.3%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
+match = -240.0%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [bocongan.gov.vn]
