--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-26 00:53:14
+lastsearch = 2024-07-26 01:35:18
 
 [www.zillow.com]
 match = -69.2%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOopLNhbIGIdxo1wPSPZtNH1ogE63fL-vwapiRSZD6flAhZ8NrwEy
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [www.njcaa.org]
 match = -140.0%%
