--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-10 00:40:18
 lastsearch = 2024-07-26 01:16:24
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -104.3%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
 match = -58.3%%
