--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-26 00:52:13
+lastsearch = 2024-07-26 01:36:21
 
 [tuananh.vn]
 match = 22.2%%
@@ -67,9 +67,9 @@ title = Jason Huynh (@jhuyner16) • Instagram photos and videos
 url = https://www.instagram.com/jhuyner16/?locale=怡+TG/飞机:@buth2788}wT4lf????????֤??ImGkE
 
 [www.facebook.com]
-match = 0.0%%
-title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
-url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318
+match = -52.0%%
+title = ĐỆM TUẤN ANH - HƯỚNG DẪN SỬ DỤNG ĐỆM LÒ XO TÚI ...
+url = https://www.facebook.com/tuananh.vn/videos/đệm-tuấn-anh-hướng-dẫn-sử-dụng-đệm-lò-xo-túi-cuộn/592113711356270/
 
 [demviethome.vn]
 match = -40.0%%
