--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-25 20:36:39
+lastsearch = 2024-07-26 01:40:08
 
 [www.tiktok.com]
 match = 0.0%%
-title = Chongyun X Aether
-url = https://www.tiktok.com/discover/chongyun-x-aether
+title = Huda Beauty Vitamin C
+url = https://www.tiktok.com/discover/huda-beauty-vitamin-c
 
 [digitalmaine.com]
 match = -75.0%%
@@ -212,8 +212,8 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -175.0%%
-title = new rolex yachtmaster - rolex yacht master price new
+match = -200.0%%
+title = new rolex yachtmaster - rolex yacht master price new ...
 url = https://mechanicaldesign-job.com/products/fpftgfny-42/
 
 [www.veryberryfrozenyogurt.com]
