CI images update

--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-26 01:01:00
+lastsearch = 2024-07-26 01:52:23
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Mùng Tự Bung đỉnh Vuông Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [munghoangphat.com]
-match = -33.3%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -45.8%%
+title = (3 CỬA) Mùng đỉnh vuông 1m8 x 2m cao cấp có viền chân
+url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m8-x-2m-cao-cap-co-vien-chan.html
 
 [demvip.vn]
 match = 45.8%%
@@ -145,4 +145,9 @@ url = https://zingtruyen.top/chapter/long-vuong-18-full/6447373/chuong-14/194631
 match = 4.2%%
 title = Hong Hoa Nguyen (@honghoa7627)
 url = https://www.instagram.com/honghoa7627/
+
+[baodaknong.vn]
+match = -100.0%%
+title = Giỗ tổ Hùng Vương 18/4 (10/3 âm lịch): Top 4 chòm sao số ...
+url = https://baodaknong.vn/gio-to-hung-vuong-18-4-10-3-am-lich-top-4-chom-sao-so-do-moi-su-thuan-loi-may-man-ngap-loi-208490.html
 
