--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-25 23:41:14
+lastsearch = 2024-07-26 01:45:06
 
 [www.amazon.com]
 match = -309.1%%
@@ -42,9 +42,9 @@ title = Bọc Ghế Da Cao Cấp - KTF Auto Đà Lạt
 url = https://ktfauto.vn/product/boc-ghe-da-cao-cap/
 
 [redcar.com.vn]
-match = -290.9%%
-title = Bọc ghế da ô tô Toyota Camry (da Thái) - RedCar.com
-url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-toyota-camry-da-thai/
+match = -236.4%%
+title = Bọc ghế da Ford Ranger (da Thái) - RedCar.com
+url = https://redcar.com.vn/san-pham/boc-ghe-da-ford-ranger-da-thai/
 
 [bocghedaoto.net]
 match = -181.8%%
