--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-25 20:54:15
+lastsearch = 2024-07-26 01:47:35
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -15.4%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -130.0%%
-title = Attendees | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/group/satc-pimtg22/attendees
+match = -140.0%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
 [backend.daikincomfort.com]
 match = -28.6%%
@@ -187,9 +187,9 @@ title = Flight Number - Airborne Sensor Facility - NASA
 url = https://asapdata.arc.nasa.gov/sensors/fsrs/94152_fsr.pdf
 
 [profiles.ucsd.edu]
-match = -63.6%%
-title = Sameer Shah
-url = https://profiles.ucsd.edu/sameer.shah
+match = -41.7%%
+title = Jack Gilbert
+url = https://profiles.ucsd.edu/jack.gilbert
 
 [profiles.ucdavis.edu]
 match = 0.0%%
