CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-26 01:20:27
+lastsearch = 2024-07-26 02:15:58
 
 [silverwow.net]
 match = -255.6%%
@@ -97,9 +97,9 @@ title = Cheong Chan Elephant Cooking Caramel Sauce 3kg ...
 url = https://www.supplybunny.com/en/products/cheong-chan-elephant-cooking-caramel-sauce-3kg-bottle-6-bottles-per-carton
 
 [shopee.com.my]
-match = -177.8%%
-title = Cheong Chan Cooking Caramel : 3kg
-url = https://shopee.com.my/Cheong-Chan-Cooking-Caramel-3kg-i.451025624.5793405457
+match = -344.4%%
+title = Cheong Chan Cooking Caramel 3kg - Dark Soy Sauce
+url = https://shopee.com.my/Cheong-Chan-Cooking-Caramel-3kg-Dark-Soy-Sauce-i.219216172.24479196450
 
 [www.ttbsupplies.com]
 match = -422.2%%
