--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-25 23:53:49
+lastsearch = 2024-07-26 02:12:10
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOoqkj7aeqpxtm-u9obYrYQbQQRrz3_h5PwrdN5URxzlwor7_XYJJ
 
 [demre.com.vn]
 match = 18.2%%
@@ -29,7 +29,7 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOor-X57H-4U-7feZoU2j25gc67euNwmjphsfGiTBpCZziVBo72q8
 
 [cafeland.vn]
 match = -45.5%%
@@ -59,7 +59,7 @@ url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=122
 [jysk.vn]
 match = -72.7%%
 title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu
+url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOoq-e2WhopCewDC4SzGp7yHG9Ouo_EBB94K5maa73icrLrC90oyP
 
 [anawood.vn]
 match = 15.8%%
@@ -99,7 +99,7 @@ url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 [www.liena.com.vn]
 match = -40.9%%
 title = 8 Kích Thước Giường Ngủ Đơn, Đôi Tiêu Chuẩn
-url = https://www.liena.com.vn/kich-thuoc-giuong-ngu-tieu-chuan
+url = https://www.liena.com.vn/kich-thuoc-giuong-ngu-tieu-chuan?srsltid=AfmBOor9fuAulUbSSEbg_lvvtaFPUWUQQh6MoK8K2r_DwE-_B2vg_8QD
 
 [hanhtinhxanh.com.vn]
 match = 11.8%%
