--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-25 23:26:07
+lastsearch = 2024-07-26 02:10:50
 
 [www.instagram.com]
-match = -180.0%%
-title = I WANNA TRY LACORVETT soaps @tiongws @pinky20193 ...
-url = https://www.instagram.com/p/CJ6AZTGpYkT/
+match = -173.3%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [thewoksoflife.com]
 match = -66.7%%
