--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-25 23:48:51
+lastsearch = 2024-07-26 02:21:04
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=jiLh-L9lZE0
 [books.google.com]
 match = -156.2%%
 title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkMudkm61&sig=ACfU3U3DY_vsv3JVWz26zDcAMnfyF3ykgw&hl=en&sa=X&ved=2ahUKEwiJ057b0sKHAxWOHjQIHRl9C-EQ6AF6BAgaEAM
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkMuejn94&sig=ACfU3U2RN2W1OjXaqzZi9uETGrn_-QDQtA&hl=en&sa=X&ved=2ahUKEwiukJre9MKHAxV5EFkFHffcDwkQ6AF6BAgeEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
