--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-26 00:56:34
+lastsearch = 2024-07-26 02:20:43
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -48,8 +48,8 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html?srsltid=AfmBOoqrF1bl2w8SbC6n9zehkpYImnbPl3OfBd8IqNqXdSPYqOYzQbuk
 
 [www.lazada.vn]
 match = 10.0%%
