--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-25 12:46:46
+lastsearch = 2024-07-26 02:27:25
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu trúc
 [demxanh.com]
 match = -9.7%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopRQ5rgzC3O8eSrUEDaj3OCXqzdUsrak-M2MC4JFfaj7k2SvKUx
+url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
 match = 9.7%%
