--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-25 21:46:35
+lastsearch = 2024-07-26 02:27:47
 
 [demxanh.com]
 match = -18.5%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOopYOA4YKf10mvag3SEwam5DLbI-8RLWWaIviyEaOYRCHfEo0V-5
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Chiếu trúc Thái đen 160x200
 url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOoqWSndNJczfxOixdXXlBDiuiEJ3KqB7N0Qx8JlAPfWXI2-RW4B8
 
 [shopee.vn]
-match = -18.5%%
-title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
-url = https://shopee.vn/universal-link/-Mã-SKAMLSC0206-giảm-10-tối-đa-70K-đơn-100K-Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
+match = -48.1%%
+title = Chiếu Tre Việt Phổ Mến Thái Bình 100%% made in Việt Nam ...
+url = https://shopee.vn/Chiếu-Tre-Việt-Phổ-Mến-Thái-Bình-100-made-in-Việt-Nam-đan-thủ-công-chắc-chắn-i.334752746.9933777878
 
 [tiki.vn]
 match = -7.4%%
