--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-25 22:20:29
+lastsearch = 2024-07-26 02:25:38
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -152.9%%
 title = The Monthly Army List - Page 5 - Google Books Result
-url = https://books.google.com/books?id=DrsrAQAAIAAJ&pg=RA1-PA5&lpg=RA1-PA5&dq=man+in+hoa+dep+14&source=bl&ots=2Cer-isg-l&sig=ACfU3U1vPj06zV3NYAZiJz28NLhvWNufDQ&hl=en&sa=X&ved=2ahUKEwi8x5z6y6-HAxU_I0QIHcoMBQkQ6AF6BAgbEAM
+url = https://books.google.com/books?id=DrsrAQAAIAAJ&pg=RA1-PA5&lpg=RA1-PA5&dq=man+in+hoa+dep+14&source=bl&ots=2Cer6ewhWr&sig=ACfU3U08bySGRPiPPlppnwoigIIPRnCkkw&hl=en&sa=X&ved=2ahUKEwjm89zg9cKHAxX7GlkFHXvyCwIQ6AF6BAhJEAM
 
 [www.house.gov]
 match = 11.8%%
