--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-25 23:59:43
+lastsearch = 2024-07-26 02:26:44
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -27,9 +27,9 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Các thương hiệu đệm bông ép hàng đầu giá hấp dẫn
-url = https://sieuthidemonline.vn/dem-bong-ep/
+match = -61.9%%
+title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -37,9 +37,9 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -57.1%%
-title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/
+match = -52.4%%
+title = Tổng kho đệm bông ép chính hãng tại Hà Nội
+url = https://demviethome.vn/dem-bong-ep/
 
 [www.tiktok.com]
 match = -95.2%%
