--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-25 23:24:44
+lastsearch = 2024-07-26 02:20:21
 
 [demxanh.com]
-match = -131.6%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
+match = -84.2%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
 url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -42.1%%
-title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
+match = -110.5%%
+title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -73.7%%
-title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
+match = -94.7%%
+title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
@@ -292,8 +292,8 @@ title = Department of Public Health Child ... - County of Los Angeles
 url = http://publichealth.lacounty.gov/cms/docs/CHDPAssessorDirectory.pdf
 
 [www.renaissanceriversidesaigon.com]
-match = -26.3%%
-title = Khách sạn 5 sao đẳng cấp Quốc tế
+match = -168.4%%
+title = Renaissance Riverside Hotel Saigon - Khách sạn 5 sao đẳng ...
 url = https://www.renaissanceriversidesaigon.com/
 
 [vetaffairs.sd.gov]
