CI images update

--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-25 23:21:31
+lastsearch = 2024-07-26 02:41:27
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -34,7 +34,7 @@ url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan
 [everonvn.com.vn]
 match = -32.1%%
 title = Đệm Bông Ép Vỏ Gấm Everon Giảm 20%% Hàng Chính Hãng
-url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon?srsltid=AfmBOorZncjtf90zzj1i5mRqFUzZZx-j7p7KjsGq9jJbIX2CdihWGL8X
+url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
@@ -89,7 +89,7 @@ url = https://demolympia.com/dem-bong-ep-olympia-luxury-gam-xop-cao-cap/
 [diepxuan.com]
 match = -10.5%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/?srsltid=AfmBOorB2rsp2oMzWH0gm-eR_imLMhLLjojGMzdQ0C5xB4GjNz-tR6tQ
+url = https://diepxuan.com/
 
 [dem24h.vn]
 match = -25.0%%
