--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-26 00:32:30
+lastsearch = 2024-07-26 02:41:06
 
 [www.facebook.com]
 match = -182.4%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/story.php/?story_fbid=892901902878579&id=10006476
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha
+url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOoqoP-83BD-icYSO6YkRVl1c8vbsEfzeLxumQMD3KV3gLXRH1gXJ
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOoqQlTUqFNBzExRh46ckWUwgWStlVrANRRvALZLoGvxFmz0mrrs1
 
 [m.facebook.com]
 match = -194.1%%
