--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-26 01:21:30
+lastsearch = 2024-07-26 02:32:30
 
 [tiki.vn]
 match = -47.6%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 18 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=-5kfc6oUOmU
+match = -104.8%%
+title = VỪA GẶP ĐÃ YÊU TẬP 18 | Phim Bộ Tình Cảm Trung Quốc ...
+url = https://www.youtube.com/watch?v=phzQ4MxJ1LQ
 
 [zh.wikipedia.org]
 match = -9.5%%
