CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-25 15:45:25
+lastsearch = 2024-07-26 02:57:48
 
 [zhangbrickshop.com]
 match = -133.3
@@ -142,9 +142,9 @@ title = Top 22 vitamin D3 K2 tăng chiều cao các mẹ tin dùng nên ...
 url = https://www.nhathuocankhang.com/ban-tin-suc-khoe/cac-loai-vitamin-d3-k2-tot-tren-thi-truong-1385972
 
 [www.youtube.com]
-match = -220.0%%
-title = That's a LOTA Bow! LUNULATA-4B Combat Bow | Destiny 2 ...
-url = https://www.youtube.com/watch?v=Rw4Y3vyFJis
+match = -213.3%%
+title = Tấp Nập Phố ĂN UỐNG từ Thanh Đa về Đường D2 (Nguyễn ...
+url = https://www.youtube.com/watch?v=JfpM2gS-NKI
 
 [www.slideshare.net]
 match = -66.7%%
