--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-26 01:24:33
+lastsearch = 2024-07-26 02:51:58
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -22,9 +22,9 @@ title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -14.3%%
-title = Bộ chăn ga gối Walt Disney mã BY20001
-url = https://changagoidemsonghong.com/chan-ga-goi-by20001
+match = -71.4%%
+title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
+url = https://changagoidemsonghong.com/chan-ga-goi-micro-dn1805
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -120,4 +120,9 @@ url = https://scandalinen.vn/product/bo-chan-ga-goi-linen-phap-nhuom-mieng-cam-d
 match = -14.3%%
 title = BỘ CHĂN GA GỐI COTTON XOA MẪU HOA NHŨ TÍM
 url = https://www.sendo.vn/bo-chan-ga-goi-cotton-xoa-mau-hoa-nhu-tim-7272139.html
+
+[dienmaycholon.com]
+match = -66.7%%
+title = Đồ Dùng Gia Đình Chăn, ga, gối nệm chính hãng ...
+url = https://dienmaycholon.com/do-dung-gia-dinh?t=chan-ga-goi-nem
 
