--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-25 21:42:01
+lastsearch = 2024-07-26 02:51:18
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -47,9 +47,9 @@ title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc 
 url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.facebook.com]
-match = -138.1%%
-title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
-url = https://www.facebook.com/ptsvietnamesenews/?locale=vi_VN
+match = -9.5%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
