--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-25 18:19:04
+lastsearch = 2024-07-26 02:58:07
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = 0.0%%
-title = Black Kingdom - D2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
+match = -226.7%%
+title = Giao Lưu Livestream Chiều 18.07 | PURA BILLIARDS - Giao ...
+url = https://www.facebook.com/purabilliards/videos/giao-lưu-livestream-chiều-1807/1207721590543543/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -172,8 +172,8 @@ title = Đồ Chơi Bắc Hà
 url = https://dochoibacha.com/
 
 [www.vietnamairport.vn]
-match = -213.3%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
+match = -240.0%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [www.victoriavn.com]
