--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-26 02:26:23
+lastsearch = 2024-07-26 02:45:07
 
 [www.galottery.com]
 match = -38.5%%
@@ -62,9 +62,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.amazon.com]
-match = -223.1%%
-title = GS Power 14 AWG (True American Wire Gauge) CCA ...
-url = https://www.amazon.com/American-Gauge-Copper-Wire/dp/B07D74Z4R1
+match = -130.8%%
+title = Toys for Kids Rogi Tayo Gani Lani (4pcs)
+url = https://www.amazon.com/Tayo-the-Little-Bus-120/dp/B0144VUMU8
 
 [www.youtube.com]
 match = -215.4%%
