--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-26 00:49:46
+lastsearch = 2024-07-26 02:59:28
 
 [www.instagram.com]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -105.6%%
-title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = 33.3%%
+title = NEM CHUA THANH HÓA
+url = https://www.facebook.com/NemChuaHaiAu/posts/𝐄𝐦-𝐱𝐢𝐧-𝐩𝐡𝐞́𝐩-𝐧𝐡𝐚̣̂𝐧-𝐝̵𝐚̣̆𝐭-𝐥𝐢̣𝐜𝐡-𝐍𝐞𝐦-𝐂𝐡𝐮𝐚-𝐀̆𝐧-𝐓𝐞̂́𝐭-𝐃̵𝐢-𝐁𝐢𝐞̂́𝐮-𝟐-𝟑-𝐧𝐠𝐚̀𝐲-𝐧𝐮̛̃𝐚-𝐭/789016583270704/
 
 [thegioinem.com]
 match = -111.1%%
