--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-26 02:17:17
+lastsearch = 2024-07-26 03:24:55
 
 [www.diepxuan.com]
 match = 0.0%%
 title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html?srsltid=AfmBOooUPAJprzw_RkzVIBfqaPgjLvWcS0ye3w349wf-zgLvoCtNLQ_9
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
