--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-25 18:31:17
+lastsearch = 2024-07-26 03:25:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,8 +12,8 @@ title = Bộ ga gối chun chan happy 16
 url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 
 [www.facebook.com]
-match = -27.8%%
-title = Happiness Việt Nam
+match = 7.7%%
+title = Happiness Việt Nam | Hanoi
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
