--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-26 01:32:15
+lastsearch = 2024-07-26 03:17:53
 
 [shopee.vn]
-match = 9.1%%
-title = Chiếu cói 3m Đẹp Sang Chuẩn xịn
-url = https://shopee.vn/Chiếu-cói-3m-Đẹp-Sang-Chuẩn-xịn-i.18845103.22331826526
+match = -77.3%%
+title = 3m -2m gấp gọn chống thấm nước hàng đẹp ngồi ăn cỗ
+url = https://shopee.vn/Chiếu-nhựa-dài-4m-3m-2m-gấp-gọn-chống-thấm-nước-hàng-đẹp-ngồi-ăn-cỗ-i.28032344.7417800514
 
 [www.facebook.com]
 match = 36.4%%
