--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-26 01:38:44
+lastsearch = 2024-07-26 03:25:16
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia
 [vinatools.com]
 match = -173.3%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong ...
-url = https://vinatools.com/keo-cat-ton-d208/
+url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOor6rdpyZGmWBgzqLw_9oih21pQB3YFvIAH96THohsbBnhakBImM
 
 [shopvnb.com]
 match = -166.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -126.7%%
-title = Celadon Sports & Resort Club - Facebook
-url = https://www.facebook.com/CeladonSRC/photos/️chỉ-còn-2-buổi-tập-nữa-chương-trình-burn-it-up-mùa-2-sẽ-kết-thúcchương-trình-bu/3097734877138264/
+match = -166.7%%
+title = Celadon Sports & Resort Club | Ho Chi Minh City
+url = https://www.facebook.com/CeladonSRC/?locale=vi_VN
 
 [lacvietauction.vn]
 match = -80.0%%
