--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-25 22:00:42
+lastsearch = 2024-07-26 03:21:43
 
 [shopee.vn]
 match = -216.7%%
@@ -42,14 +42,14 @@ title = GHẾ NỆM DỰA CAO CẤP 4000-913
 url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
-match = -241.7%%
-title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
-url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
+match = -216.7%%
+title = Mua Nệm ghế thảm ghế 2m4 x 60cm Màu đỏ hoàng gia
+url = https://tiki.vn/nem-ghe-tham-ghe-2m4-x-60cm-mau-do-hoang-gia-p87050602.html
 
 [suongtuyet.com]
-match = -133.3%%
-title = Nên Mua Thảm Lót Ghế Gỗ Hay Đệm Ghế Gỗ?
-url = https://suongtuyet.com/nen-mua-tham-lot-ghe-go-hay-dem-ghe-go.html
+match = -125.0%%
+title = Bộ Sưu Tập Đệm Ghế Gỗ Đẹp Nhất 2024
+url = https://suongtuyet.com/bo-suu-tap-nem-ghe-go-dep-gia-re-cho-gia-dinh.html
 
 [nemkimcuong.vn]
 match = -191.7%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ SOFA TÂN CỔ ĐIỂN CĐ01 - Xuất khẩu
 url = https://nemkimcuong.vn/mienbac/vi/san-pham/bo-ghe-sofa-tan-co-dien-cd01-xuat-khau/
 
 [www.lazada.vn]
-match = -258.3%%
-title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
-url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
+match = -300.0%%
+title = Nệm ghế , thảm ghế hoàng gia đỏ các kích thước từ 1m7 x ...
+url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html
 
 [vn.my-best.com]
 match = -233.3%%
