CI images update

--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-26 01:31:33
+lastsearch = 2024-07-26 03:35:28
 
 [hk.linkedin.com]
 match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+title = Chan Hoi Ching Ella - HKU Business School
+url = https://hk.linkedin.com/in/chan-hoi-ching-ella
 
 [www.instagram.com]
-match = -230.8%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -238.5%%
+title = Coco Chan (@cocopops072) • Instagram photos and videos
+url = https://www.instagram.com/cocopops072/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
