--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-25 20:50:44
+lastsearch = 2024-07-26 03:42:07
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -121.1%%
+title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
+url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -53,8 +53,8 @@ url = https://baothanhhoa.vn/bao-tu-manh-nhat-trong-hai-thap-ky-gay-anh-huong-to
 
 [shophoavungtau.com]
 match = -89.5%%
-title = Ý nghĩa hoa mộc lan: Vẻ đẹp của sự thuần khiết
-url = https://shophoavungtau.com/y-nghia-hoa-moc-lan
+title = Đi viếng đám tang vái lạy mấy lần cho đúng cách
+url = https://shophoavungtau.com/vai-lay-dam-tang-may-lan
 
 [tiin.vn]
 match = -147.4%%
