--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-25 23:47:53
+lastsearch = 2024-07-26 03:28:17
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -48,8 +48,8 @@ url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
 match = -206.2%%
-title = Thị trường tiêu dùng ngày 25-7-2024 | Thị trường tiêu dùng
-url = https://www.youtube.com/watch?v=rT3TGv6yJcM
+title = Nhà ai có CÚNG GIỖ mỗi năm lưu ý kĩ việc này - Vấn Đáp ...
+url = https://www.youtube.com/watch?v=rrQtAQA8qGI
 
 [saigontourist.edu.vn]
 match = -162.5%%
