--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-26 02:35:15
+lastsearch = 2024-07-26 03:33:28
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,9 +62,9 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -162.5%%
@@ -72,9 +72,9 @@ title = TIN CHIỀU 25/7: HUYỀN THOẠI M.U MUỐN GIỮ RASHFORD ...
 url = https://www.youtube.com/watch?v=LXqHpPenE6A
 
 [books.google.com]
-match = -81.2%%
-title = Tam tu kinh: - Google Books Result
-url = https://books.google.com/books?id=6LwwAQAAMAAJ&pg=PP378&lpg=PP378&dq=chieu+lac+soc+16&source=bl&ots=hpvyNtw9Q_&sig=ACfU3U1nEnCJnWnrEnL79pmoxoHzhmZNmg&hl=en&sa=X&ved=2ahUKEwjt2euXl8GHAxWgtokEHVBLDAAQ6AF6BAgeEAM
+match = -168.8%%
+title = Địa chí Thái Nguyên - Page 368 - Google Books Result
+url = https://books.google.com/books?id=U0ZRAQAAMAAJ&pg=PA368&lpg=PA368&dq=chieu+lac+soc+16&source=bl&ots=z7JZzN5jXq&sig=ACfU3U0ti8TYmye1TQr1Z2aarAqrlRFzJw&hl=en&sa=X&ved=2ahUKEwinobn1hMOHAxURElkFHXwqDFQQ6AF6BAgiEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -282,9 +282,9 @@ title = Ngỡ hết thời, ai dè chiếu Việt... xuất ngoại, ẵm về t
 url = https://tuoitre.vn/ngo-het-thoi-ai-de-chieu-viet-xuat-ngoai-am-ve-trieu-do-20190503214000009.htm
 
 [xaydungchinhsach.chinhphu.vn]
-match = -206.2%%
-title = TUYÊN ÁN 2 cựu Phó Chủ tịch huyện, Phó Chánh Văn phòng ...
-url = https://xaydungchinhsach.chinhphu.vn/tuyen-an-cuu-pho-chu-tich-huyen-pho-chanh-van-phong-chu-tich-xa-cung-mot-loat-can-bo-cong-chuc-119240725180937714.htm
+match = -193.8%%
+title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng ...
+url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
 
 [canbangdongclc.com]
 match = -68.8%%
