CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-26 03:13:38
+lastsearch = 2024-07-26 03:53:43
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -182.4%%
-title = Can HOA restrict me from working on my car in my driveway?
-url = https://www.quora.com/Can-HOA-restrict-me-from-working-on-my-car-in-my-driveway
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -505,4 +505,9 @@ url = https://calcivilrights.ca.gov/housing/
 match = -94.1%%
 title = Code Enforcement & Property Maintenance
 url = https://www.newcastlede.gov/250/Code-Enforcement-Property-Maintenance
+
+[guides.sll.texas.gov]
+match = 0.0%%
+title = 
+url = https://guides.sll.texas.gov/property-owners-associations/ccrs
 
