--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-25 17:53:40
+lastsearch = 2024-07-26 03:50:30
 
 [demxanh.com]
-match = 3.4%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel xanh nhạt
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOorjCsnYPys66W53BDPi6ZQNm40MQX4I_sU9pbyRwd-u9BhgflVU
 
 [entershopping.vn]
 match = 3.4%%
@@ -39,7 +39,7 @@ url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 [www.diepxuan.com]
 match = 58.6%%
 title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOopU1VVeZ6fin9fM-9zFOnrnHGmGZ-_-j2lLh1QJLHMhkYl7Cvjp
 
 [russo.vn]
 match = -20.7%%
