--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-26 03:14:40
+lastsearch = 2024-07-26 03:45:05
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,13 +17,13 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -6.5%%
-title = đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+match = -22.6%%
+title = Ga chống thấm Hilton Cotton cao cấp CTHT01 | Khuyến mãi
+url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html
 
 [dreamland.vn]
-match = -21.1%%
-title = Chăn Tuyết Điều Hòa
+match = -38.7%%
+title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
