--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-26 02:26:44
+lastsearch = 2024-07-26 03:52:43
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -14,7 +14,7 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 [demxanh.com]
 match = -19.0%%
 title = Đệm bông ép chính hãng giảm 50 ...
-url = https://demxanh.com/dem-bong-ep.html
+url = https://demxanh.com/dem-bong-ep.html?srsltid=AfmBOoql6YnILt1JpyZA0awCyMXWHJZil6YgKKGM4umqEdACZ5T7M7d-
 
 [www.ebay.com]
 match = -100.0%%
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 [www.diepxuan.com]
 match = -61.9%%
 title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+url = https://www.diepxuan.com/nem-everhome.html?srsltid=AfmBOoqayZW5Zfye4EQWBU7-o06O8DYv0kVicnBkpQhWpXhxD_FeU0b7
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -54,7 +54,7 @@ url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 [demviethome.vn]
 match = -52.4%%
 title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/
+url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOoqM1LQ7P7lMpLW0vh_vhllJPPywd4rwTnVXQM2SMcQiwq25rRCT
 
 [www.tiktok.com]
 match = -95.2%%
