--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-25 23:28:16
+lastsearch = 2024-07-26 04:35:09
 
 [www.kymdan.com]
-match = 4.2%%
-title = Bộ ga trải giường Kymdan
-url = https://www.kymdan.com/danh-muc/drap-trai-giuong
+match = -333.3%%
+title = Kymdan
+url = https://www.kymdan.com/home.do?lang=en
 
 [thegioidemviet.vn]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
 [www.lazada.vn]
 match = -15.6%%
 title = Bộ ga chun chần Kim Cương vải Tencel 1 màu kích thước ...
-url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html?srsltid=AfmBOopmLPZenUi3cDWUNNpCIBFqvKxY1Dr281xf9a9Fp9H2KufUGs-j
+url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html?srsltid=AfmBOop3o859C3rCwYyMo5xO6ajrTxl-YQaUwP0MRgDTPwqral7CQQ6R
 
 [shopee.vn]
 match = -25.0%%
