--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-26 00:47:39
+lastsearch = 2024-07-26 04:26:11
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOoph2jcifbuM1UvY3q2kv6FxQhlPooZ_5RWcavJNT7txM2vwc3fa
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html?srsltid=AfmBOorHeuGLywejpjNbpSWL9KQvM9FXFZifFQE6HRyMDSWwUNtXi21p
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
 
 [uannga.vn]
 match = 56.5%%
