--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-26 01:41:28
+lastsearch = 2024-07-26 04:41:39
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = 0.0%%
-title = Chiếu đèn vàng da 15 phút có hiệu quả không?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi/
+match = -10.7%%
+title = Hướng dẫn chiếu đèn điều trị vàng da sơ sinh
+url = https://www.vinmec.com/vie/bai-viet/huong-dan-chieu-den-dieu-tri-vang-da-so-sinh-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
