--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-26 03:27:24
+lastsearch = 2024-07-26 04:43:23
 
 [demxanh.com]
-match = 43.5%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html?srsltid=AfmBOorFdsAtVqLxljfdFu__s9YXrwxM3Ri3KEuoy9g9fXxiz60yHaOR
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOook2xCdu84WN_s888zSrUCZ-40dviKaqSFbNbDTuK6Q95lGlt_V
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 
 [www.dienmayxanh.com]
 match = -36.7%%
