--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-26 02:51:18
+lastsearch = 2024-07-26 04:38:38
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [www.youtube.com]
 match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=GzepFXdUfeQ
+title = Toàn cảnh thời sự quốc tế tối 25/7 Cập Nhật Siêu bão Gaemi ...
+url = https://www.youtube.com/watch?v=WqftEItudsg
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -57,14 +57,14 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [vi.wikipedia.org]
-match = -14.3%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 33.3%%
+title = Địa lý Đài Loan
+url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [trithucvn.co]
-match = -123.8%%
-title = Đài Loan: Cựu bác sỹ TQ phơi bày nạn thu hoạch nội tạng ...
-url = https://trithucvn.co/the-gioi/dai-loan-cuu-bac-sy-tq-phoi-bay-nan-thu-hoach-noi-tang-song-cua-dcstq.html
+match = -100.0%%
+title = Nhà ngoại cảm Parker: Vấn đề eo biển Đài Loan là chìa ...
+url = https://trithucvn.co/the-gioi/nha-ngoai-cam-parker-van-de-eo-bien-dai-loan-la-chia-khoa-thang-cu-cua-ong-trump.html
 
 [xuatnhapcanh.gov.vn]
 match = -66.7%%
