--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-26 03:18:37
+lastsearch = 2024-07-26 04:41:59
 
 [shopee.vn]
 match = 25.0%%
@@ -77,14 +77,14 @@ title = Con Lắc Đơn Là Gì? Công Thức, Vận Tốc, Chu Kỳ Và Tần S
 url = https://vuihoc.vn/tin/thpt-con-lac-don-1139.html
 
 [baomoi.com]
-match = -106.2%%
-title = Barca muốn chiêu mộ 'máy quét' N'Golo Kante
-url = https://baomoi.com/barca-muon-chieu-mo-may-quet-n-golo-kante-c49701372.epi
+match = -81.2%%
+title = Giữ nghề dệt chiếu truyền thống Thu Xà
+url = https://baomoi.com/giu-nghe-det-chieu-truyen-thong-thu-xa-c48769346.epi
 
 [nhathuoclongchau.com.vn]
 match = -200.0%%
 title = Cách tăng chiều cao ở tuổi 12 đơn giản, dễ dàng ngay tại ...
-url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html?srsltid=AfmBOornrKv51AaoDY8665x4iu12GgwUeF4yY7CaTBETsbP8LxNrcdJE
+url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html
 
 [vietstock.vn]
 match = -231.2%%
