--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-26 03:30:52
+lastsearch = 2024-07-26 04:27:35
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoo0TbZbya_ZnD1kdl1UMU6PrdmRLcFaJIett4zgjIyFYSCsdJjC
 
 [shopee.vn]
 match = -85.0%%
