--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-26 03:00:34
+lastsearch = 2024-07-26 04:29:20
 
 [www.gov.uk]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -100.0%%
-title = YouTube
-url = https://www.youtube.com/watch?v=_tpd4v1emkc
+match = -86.7%%
+title = 1 Corinthians 16:13 || Act Like Men
+url = https://www.youtube.com/watch?v=gkX5_aZPBXU
 
 [vietjack.com]
 match = -106.7%%
@@ -1030,4 +1030,14 @@ url = https://www.tcu.edu/
 match = -160.0%%
 title = St Michael Cinema 15 St Michael | Movie Theater
 url = https://www.stmichaelcinema.com/
+
+[www.fifa.com]
+match = -46.7%%
+title = FIFA | The Home of Football
+url = https://www.fifa.com/
+
+[www.whitehouse.gov]
+match = 13.3%%
+title = The White House
+url = https://www.whitehouse.gov/
 
