--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-25 20:22:16
+lastsearch = 2024-07-26 04:42:41
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -42,8 +42,8 @@ title = Thảm chân giường
 url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
-match = -72.7%%
-title = 5 loại thảm trải giường hot nhất hiện nay - Cafeland
+match = -100.0%%
+title = 5 loại thảm trải giường hot nhất hiện nay 2022 - CafeLand.Vn
 url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112172.html
 
 [noithatviva.vn]
