CI images update

--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-26 04:12:58
+lastsearch = 2024-07-26 04:44:50
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -62,9 +62,9 @@ title = Di tích lịch sử Rạch gầm - Xoài mút
 url = https://svhttdl.tiengiang.gov.vn/di-tich-lich-su/-/asset_publisher/wxIoUS9QiA4e/content/di-tich-lich-su-rach-gam-xoai-mut
 
 [www.youtube.com]
-match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+match = -193.8%%
+title = TIN CHIỀU 23/7: “TÔI TIN M.U SẼ TRỞ LẠI ĐỈNH CAO”, PEP ...
+url = https://www.youtube.com/watch?v=Y4c6LlBM7qY
 
 [lienminhhtxhaiphong.org.vn]
 match = -25.0%%
@@ -380,4 +380,9 @@ url = https://vnexpress.net/chu-muu-buon-lau-6-tan-vang-khong-hieu-biet-phap-lua
 match = -162.5%%
 title = Thanh Hóa xảy ra động đất 4,1 độ gây rung lắc mạnh
 url = https://moitruong.net.vn/thanh-hoa-xay-ra-dong-dat-4-1-do-gay-rung-lac-manh-75789.html
+
+[baobacgiang.vn]
+match = -206.2%%
+title = Khẩn cấp khắc phục sự cố sạt lở bờ sông Thương tại Yên ...
+url = https://baobacgiang.vn/khan-cap-khac-phuc-su-co-sat-lo-bo-song-thuong-tai-yen-the-122832.bbg
 
