--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-26 04:30:41
+lastsearch = 2024-07-26 04:48:02
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -110.5%%
-title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
+match = -42.1%%
+title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -292,8 +292,8 @@ title = Department of Public Health Child ... - County of Los Angeles
 url = http://publichealth.lacounty.gov/cms/docs/CHDPAssessorDirectory.pdf
 
 [www.renaissanceriversidesaigon.com]
-match = -168.4%%
-title = Renaissance Riverside Hotel Saigon - Khách sạn 5 sao đẳng ...
+match = -26.3%%
+title = Khách sạn 5 sao đẳng cấp Quốc tế
 url = https://www.renaissanceriversidesaigon.com/
 
 [vetaffairs.sd.gov]
