--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-26 04:35:09
+lastsearch = 2024-07-26 04:49:47
 
 [www.kymdan.com]
 match = -333.3%%
@@ -22,14 +22,14 @@ title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
 url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
-match = 0.0%%
-title = bộ ga everon esbm 21016
-url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
+match = 11.5%%
+title = bộ chăn ga everon ept24036
+url = https://yeshomebedding.com/bo-san-pham-everon-ept24036
 
 [www.lazada.vn]
 match = -15.6%%
 title = Bộ ga chun chần Kim Cương vải Tencel 1 màu kích thước ...
-url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html?srsltid=AfmBOop3o859C3rCwYyMo5xO6ajrTxl-YQaUwP0MRgDTPwqral7CQQ6R
+url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html
 
 [shopee.vn]
 match = -25.0%%
