--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-26 02:10:50
+lastsearch = 2024-07-26 04:56:42
 
 [www.instagram.com]
 match = -173.3%%
@@ -47,9 +47,9 @@ title = CHAN Hoi-man
 url = https://www.soc.cuhk.edu.hk/profile/chan-hoi-man/
 
 [hk.linkedin.com]
-match = -26.7%%
-title = Chan Hoi Yan - HKSAR government
-url = https://hk.linkedin.com/in/chan-hoi-yan-83322114b
+match = -73.3%%
+title = Hoi Lam Chan - Hong Kong, Hong Kong SAR
+url = https://hk.linkedin.com/in/hoi-lam-chan-8b5281261
 
 [www.polyu.edu.hk]
 match = -160.0%%
