--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-26 01:18:05
+lastsearch = 2024-07-26 04:46:38
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [shopee.vn]
 match = -3.6%%
@@ -17,9 +17,9 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
-match = 25.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = 10.7%%
+title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [demxanh.com]
 match = -28.6%%
@@ -82,9 +82,9 @@ title = Index of /wp-content/uploads/2024/05/
 url = https://caobanggreen.vn/wp-content/uploads/2024/05/?ND
 
 [muathongminh.vn]
-match = 35.7%%
-title = Chiếu trúc hạt vàng loại tốt-quế lâm 1
-url = https://muathongminh.vn/chieu-truc-hat-vang-loai-tot-que-lam-1-p.2__1312554042
+match = -3.6%%
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
+url = https://muathongminh.vn/chieu-truc-que-lam-mat-ngoc-hat-vang-bong-dep-loai-1-p.1__7879754206__121274905
 
 [huyrua.wordpress.com]
 match = -67.9%%
