--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-26 04:23:27
+lastsearch = 2024-07-26 04:55:40
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -176.5%%
-title = What can I do when a Homeowner's Association pops up in ...
-url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
+match = -182.4%%
+title = Can HOA restrict me from working on my car in my driveway?
+url = https://www.quora.com/Can-HOA-restrict-me-from-working-on-my-car-in-my-driveway
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -170.6%%
-title = Original Video of Hoa Guy Fines Neighbor for to Many ...
-url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
+match = -82.4%%
+title = I need advice #lawyer #hoa #taylorswift
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.21alivenews.com]
 match = -123.5%%
