--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-26 00:48:43
+lastsearch = 2024-07-26 04:57:47
 
 [shopee.vn]
 match = -171.4%%
@@ -27,9 +27,9 @@ title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
 url = https://manthutrang.com/
 
 [www.mantubung.com]
-match = -228.6%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -150.0%%
+title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
+url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
 match = -164.3%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -128.6%%
-title = LUKA 18 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.18.MIZCLBSI
+match = -142.9%%
+title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
+url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
 
 [mungchup.com]
 match = -164.3%%
