--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-26 03:40:00
+lastsearch = 2024-07-26 04:49:25
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -144.4%%
-title = Thùy Ngân (@huuloc861) • Instagram photos and videos
-url = https://www.instagram.com/huuloc861/
+match = -50.0%%
+title = NEM Furniture JSC (@nemfurniturejsc)
+url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.facebook.com]
 match = -105.6%%
@@ -27,9 +27,9 @@ title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
 url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [www.tiktok.com]
-match = -33.3%%
-title = Playah Krebs
-url = https://www.tiktok.com/discover/playah-krebs
+match = -127.8%%
+title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
+url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
 match = -133.3%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -150.0%%
-title = Ăn vặt ngon Cali | CHẢ HUẾ MINI - CHẢ ỐC - NEM CHUA ...
-url = https://m.facebook.com/groups/anvatngoncali/posts/8391039154242358/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [www.proz.com]
 match = -183.3%%
