--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-25 22:47:52
+lastsearch = 2024-07-26 05:25:22
 
 [www.everonvn.vn]
-match = 80.8%%
-title = Đệm lò xo Everon Pocket Pops
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
+match = -61.5%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -67,9 +67,9 @@ title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
 url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
-match = -19.2%%
-title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+match = -15.4%%
+title = Đệm Lò Xo chính hãng giá chỉ từ 2Tr - Hà Nội
+url = https://demxanh.com/dem-lo-xo.html
 
 [dailyeveron.vn]
 match = 80.8%%
