--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-25 22:33:44
+lastsearch = 2024-07-26 05:19:33
 
 [everonvn.com.vn]
 match = 7.4%%
 title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia?srsltid=AfmBOopYUTS2ZR8uzS7_xBODP2TNxTZ_FB9JMOxEE7FUNyC9wggafLkG
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/
+url = https://everon.com.vn/epm-19064/?srsltid=AfmBOopisWz_zGREFeblq39L_Lh5YfKPwIymQLDvlEjVSde90fiELbmv
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoosul2s55W1ahlnCW98H0ia9lBnx3S19TJuHWXNQQ5bsM2eMMAv
 
 [shopee.vn]
 match = -48.1%%
