--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-26 04:43:02
+lastsearch = 2024-07-26 05:22:23
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = -9.1%%
-title = 60 PHÚT COMBO FULLFACE
-url = https://www.facebook.com/PKCKDL.VTMQTHOAKY/photos/60-phút-combo-fullface-định-hình-và-căn-chỉnh-khung-mặt-tự-nhiên-không-phẫu-thuậ/458346137051558/
+match = 22.2%%
+title = Viện Thẩm Mỹ Quốc Tế Hoa Kỳ
+url = https://www.facebook.com/photo/?fbid=457009793851859&set=pcb.457009990518506
 
 [nhua66a.com]
 match = -17.9%%
@@ -132,9 +132,9 @@ title = Thực phẩm bảo vệ sức khỏe Vitamin B Mix DHC | healthyct.vn
 url = https://healthyct.vn/san-pham/vitamin-b-mix-dhc/
 
 [www.tiktok.com]
-match = -57.1%%
-title = Tức ak, thoa kem cho cố buổi sáng táp táp giùm em kem ...
-url = https://www.tiktok.com/@chanhbeauty93/video/7237827360110726406
+match = -25.0%%
+title = BỪNG SÁNG LÀN DA VỚI VIÊN UỐNG TRẮNG DA NĂNG ...
+url = https://www.tiktok.com/@ultravvn/video/7330165886915038472
 
 [www.scribd.com]
 match = -10.7%%
@@ -245,4 +245,9 @@ url = https://vi.wikipedia.org/wiki/Thành_viên:King_of_Xavier/nháp/1
 match = 0.0%%
 title = BỌ CHÉT - Viện Sốt rét
 url = https://www.impehcm.org.vn/noi-dung/cac-benh-do-con-trung-khac/bo-chet.html
+
+[trongdoitam1.mysapo.net]
+match = 25.0%%
+title = Tượng nữ thần bằng đá 18
+url = https://trongdoitam1.mysapo.net/tuo-ng-nu-tha-n-ba-ng-da-18
 
