--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-25 21:01:16
+lastsearch = 2024-07-26 05:17:49
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Đèn chiếu điểm HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -160.0%%
+title = Công Ty Sản Xuất Đèn LED Chiếu Sáng HT Light Level
+url = https://www.htlightlevel.vn/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -37,9 +37,9 @@ title = HT Chiếu Sáng
 url = https://www.dienotobinhdinh.com/ht-chieu-sang/
 
 [www.facebook.com]
-match = -80.0%%
-title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
-url = https://www.facebook.com/chieutructot/?locale=vi_VN
+match = -186.7%%
+title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
+url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
 
 [rangdong.com.vn]
 match = 6.7%%
