--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-26 04:58:31
+lastsearch = 2024-07-26 05:28:11
 
 [demxanh.com]
 match = 6.9%%
 title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html?srsltid=AfmBOoou26m46J4vCoNxP5rnSMZBof_rS_dnRSJNzjSWifdmRR4fFhhh
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html
 
 [tiki.vn]
 match = 20.7%%
@@ -24,7 +24,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [www.lazada.vn]
 match = 13.8%%
 title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html?srsltid=AfmBOorVeFy3OOe8XaRhe81NVbHT0TzRtjLEgiqB-oo-v2Mdr1fhIoHW
+url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
 
 [nanara.vn]
 match = 34.5%%
