--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-26 04:22:48
+lastsearch = 2024-07-26 05:13:06
 
 [shopee.vn]
-match = -90.9%%
-title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
-url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
+match = -77.3%%
+title = 3m -2m gấp gọn chống thấm nước hàng đẹp ngồi ăn cỗ
+url = https://shopee.vn/Chiếu-nhựa-dài-4m-3m-2m-gấp-gọn-chống-thấm-nước-hàng-đẹp-ngồi-ăn-cỗ-i.28032344.7417800514
 
 [www.facebook.com]
 match = 36.4%%
@@ -22,9 +22,9 @@ title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
 url = https://m.facebook.com/61553157173242/
 
 [www.lazada.vn]
-match = -36.4%%
-title = chiếu nhựa gấp gọn Thái Bình tiện dụng 2.0 m x 3.0 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-20-m-x-30-m-i813824278.html
+match = -86.4%%
+title = Chiếu Nhựa 2mx 3m Giá Tốt T05/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=5
 
 [tiki.vn]
 match = -86.4%%
