--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-26 01:37:41
+lastsearch = 2024-07-26 05:27:08
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -397,9 +397,9 @@ title = Sắc mới Sao Cô Sỉn
 url = https://baolaocai.vn/sac-moi-sao-co-sin-post387337.html
 
 [vov.vn]
-match = -118.8%%
-title = Triển lãm tranh “Hồi sinh” trên vùng đất lửa
-url = https://vov.vn/van-hoa/trien-lam-tranh-hoi-sinh-tren-vung-dat-lua-post1106540.vov
+match = -206.2%%
+title = Tường thuật trực tiếp lễ viếng Tổng Bí thư Nguyễn Phú ...
+url = https://vov.vn/chinh-tri/tuong-thuat-truc-tiep-le-vieng-tong-bi-thu-nguyen-phu-trong-chieu-va-toi-257-post1110141.vov
 
 [cafef.vn]
 match = -175.0%%
@@ -630,4 +630,9 @@ url = https://hoabinhtv.vn/chinh-tri/thong-tin-le-vieng-le-truy-dieu-tong-bi-thu
 match = -256.2%%
 title = Thông tin lễ viếng, lễ truy điệu Tổng Bí thư Nguyễn Phú Trọng ...
 url = https://media.chinhphu.vn/thong-tin-le-vieng-le-truy-dieu-tong-bi-thu-nguyen-phu-trong-tai-que-nha-102240724151112475.htm
+
+[loichuahomnay.vn]
+match = -143.8%%
+title = LỜI CHÚA NGÀY MAI - BÀI ĐỌC & TIN MỪNG & SUY ...
+url = https://loichuahomnay.vn/loi-chua-ngay-mai
 
