CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-26 04:46:16
+lastsearch = 2024-07-26 05:31:59
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -27,14 +27,14 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -160.0%%
+title = Svara
+url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
-match = -200.0%%
-title = Georgia Department of Public Safety | Atlanta GA
-url = https://www.facebook.com/gadepartmentofpublicsafety/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -269.2%%
