--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-26 01:47:13
+lastsearch = 2024-07-26 05:41:33
 
 [www.muji.com]
-match = 0.0%%
-title = 
-url = https://www.muji.com/ae/feature/whatismuji/
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOorQtfYtJDLsEoufp0Iq-MRndZ9B6IpkiK345NDQtRZq7K14xIbn
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOorYtBi7jGGKeldXH4QEi459Ztt5k9HO0nUUx8cbjEVM8rTTg3GA
 
 [sugoimart.com]
 match = -257.1%%
