--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-26 03:55:24
+lastsearch = 2024-07-26 05:42:15
 
 [demxanh.com]
 match = -42.9%%
@@ -147,14 +147,14 @@ title = Andrea schmider facebook [t8zAms] - external-link - Kvaser
 url = https://www.kvaser.cn/en/external-link/?url=https://detsad147vrn.ru/m7kv6ocwwwnurcecombramafe85
 
 [www.staleyfarmshomeskc.com]
-match = -92.9%%
-title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
+match = -60.7%%
+title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -10.7%%
-title = Derek diedricksen cabin - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1aktidr.xn--p1ai/5386294753misclinicv4fe36a
+match = -3.6%%
+title = Tali temali pramuka pdf - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1abf1bk7b.xn--p1ai/21876459kdxgrh8t7v34cfdv4fe36a
 
 [news.google.it]
 match = -3.6%%
