--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-26 01:21:09
+lastsearch = 2024-07-26 05:36:21
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -107,9 +107,9 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -400.0%%
-title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis - Airbnb
-url = https://www.airbnb.com.vn/hotels/1059440610457947224
+match = -309.1%%
+title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
+url = https://www.airbnb.com.vn/rooms/929459059736966278
 
 [freemeteo.cl]
 match = -281.8%%
@@ -117,9 +117,9 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=10&language=english&country=vietnam
 
 [www.booking.com]
-match = -372.7%%
-title = Country Inn & Suites by Radisson, Bloomington at Mall of ...
-url = https://www.booking.com/hotel/us/country-inn-and-suites-at-mall-of-america.vi.html
+match = -327.3%%
+title = Country Inn & Suites by Radisson, Mankato Hotel and ...
+url = https://www.booking.com/hotel/us/country-inn-mankato.vi.html
 
 [www.agoda.com]
 match = -263.6%%
