--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-25 18:49:12
+lastsearch = 2024-07-26 05:35:02
 
 [www.facebook.com]
 match = -45.0%%
@@ -12,9 +12,9 @@ title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
 url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [demxanh.com]
-match = -85.0%%
-title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
+match = -105.0%%
+title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
+url = https://demxanh.com/
 
 [www.khodemthanhdo.com]
 match = 5.0%%
@@ -95,4 +95,9 @@ url = https://www.instagram.com/meshepoo/reel/Cl7jLn0I7ET/
 match = -75.0%%
 title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
 url = https://remdemgiaphat.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18/
+
+[changagoidemdep.vn]
+match = -75.0%%
+title = Chăn ga gối Singapore Pyeoda Sky silk 5 món mã 18
+url = https://changagoidemdep.vn/chan-ga-goi-singapore-pyeoda-sky-silk-5-mon-ma-18.html
 
