CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 22:43:05
 lastsearch = 2024-07-26 05:34:20
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -88.9%%
+title = Thông tin
+url = https://hoa18.com/category/thong-tin
 
 [www.youtube.com]
 match = -147.4%%
