--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-26 03:54:24
+lastsearch = 2024-07-26 05:44:49
 
 [www.galottery.com]
 match = -38.5%%
@@ -470,4 +470,9 @@ url = https://www.drugs.com/sfx/gani-tuss-dm-nr-side-effects.html
 match = -292.3%%
 title = The Compassionate Friends Non-Profit Organization for Grief
 url = https://www.compassionatefriends.org/
+
+[map.feedingamerica.org]
+match = -261.5%%
+title = Map the Meal Gap: Hunger & Poverty in the United States
+url = https://map.feedingamerica.org/
 
