--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-26 05:16:44
+lastsearch = 2024-07-26 05:49:35
 
 [everon.online]
 match = -32.0%%
@@ -19,7 +19,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOooP7TanuxpsMnw3eMlIV63MXKDAYKteHwqPTXXWaYmkIxI_qkhQ
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -100.0%%
-title = Vòng Tay Ba Mẹ, Ba Là Ánh Mặt Trời Kia - Nhạc Thiếu Nhi Vui ...
-url = https://www.youtube.com/watch?v=RtjQBVtzZSA
+match = -72.0%%
+title = Mẹ là vòng tay ấp ôm con qua những ngày đông - BÀI HÁT ...
+url = https://www.youtube.com/watch?v=pZgnw_kzo_E
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOorhwhirTokt_DNfcitlJGTSJFzomq2j51ljmJknTHgkgCIAfoWS
 
 [format.com.vn]
 match = -100.0%%
