--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-26 03:35:28
+lastsearch = 2024-07-26 06:00:50
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan Hoi Ching Ella - HKU Business School
-url = https://hk.linkedin.com/in/chan-hoi-ching-ella
+match = 0.0%%
+title = Coco Chan - Hoi Lai Kok
+url = https://hk.linkedin.com/in/coco-chan-935486254
 
 [www.instagram.com]
 match = -238.5%%
@@ -47,9 +47,9 @@ title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
-match = -200.0%%
-title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
-url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
+match = -146.2%%
+title = My Son and Hoi An Private Tour - Da Nang
+url = https://www.tripadvisor.com/AttractionProductReview-g298085-d15754849-My_Son_and_Hoi_An_Private_Tour-Da_Nang.html
 
 [jovelchan.com]
 match = -238.5%%
@@ -112,9 +112,9 @@ title = ABC Network - ABC.com
 url = https://abc.com/
 
 [www.scmp.com]
-match = 9.1%%
-title = Athena Chan
-url = https://www.scmp.com/author/athena-chan
+match = -284.6%%
+title = South China Morning Post: Breaking China, Asia, HK News ...
+url = https://www.scmp.com/asia
 
 [www.facebook.com]
 match = -15.4%%
