--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 22:42:42
 lastsearch = 2024-07-26 05:46:56
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
+match = -666.7%%
+title = 1/4
+url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = 13.0%%
-title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieucaobang/
+match = 21.7%%
+title = CAO BẰNG HÓNG | Cao Bang
+url = https://www.facebook.com/caobanghong/?locale=vi_VN
 
 [www.youtube.com]
 match = -87.0%%
@@ -127,9 +127,9 @@ title = Truang Thj Anh Tuylt va Dtg Tgp chi KHOA HQC & CONG NGHE
 url = https://sti.vista.gov.vn/file_DuLieu/dataTLKHCN//CTv178/2013/CTv178V112S12-22013125.pdf
 
 [caobangtv.vn]
-match = 30.0%%
-title = Truyền hình Cao Bằng
-url = http://caobangtv.vn/
+match = -185.7%%
+title = Thời sự
+url = http://caobangtv.vn/video-c24/thoi-su.html
 
 [langson.gov.vn]
 match = -73.9%%
@@ -150,4 +150,9 @@ url = https://phunuvietnam.vn/bang-khuang-khoi-bep-chieu-que-20240719133703632.h
 match = 52.6%%
 title = Chiếu trúc Cao Bằng
 url = http://chieutruccaobang.com.vn/
+
+[nhandan.vn]
+match = -87.5%%
+title = Cao Bằng
+url = https://nhandan.vn/dia-phuong/cao-bang/16.html
 
