--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-26 04:48:02
+lastsearch = 2024-07-26 05:57:40
 
 [demxanh.com]
-match = -84.2%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
+match = -131.6%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
 url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
@@ -292,8 +292,8 @@ title = Department of Public Health Child ... - County of Los Angeles
 url = http://publichealth.lacounty.gov/cms/docs/CHDPAssessorDirectory.pdf
 
 [www.renaissanceriversidesaigon.com]
-match = -26.3%%
-title = Khách sạn 5 sao đẳng cấp Quốc tế
+match = -168.4%%
+title = Renaissance Riverside Hotel Saigon - Khách sạn 5 sao đẳng ...
 url = https://www.renaissanceriversidesaigon.com/
 
 [vetaffairs.sd.gov]
