CI images update

--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-26 02:28:20
+lastsearch = 2024-07-26 06:14:01
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 4
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [decoviet.vn]
 match = 22.2%%
@@ -87,9 +87,9 @@ title = Thảm trải giường cao su non màu trắng
 url = https://thegioidemonline.com/tham-trai-giuong-cao-su-non-mau-trang.html
 
 [vn.my-best.com]
-match = -100.0%%
-title = Top 10 Thảm Trải Sàn tốt nhất hiện nay (Tư vấn mua 2024)
-url = https://vn.my-best.com/37075
+match = -68.2%%
+title = Top 8 Giường Tầng Thông Minh đẹp và tốt nhất ...
+url = https://vn.my-best.com/35793
 
 [www.sendo.vn]
 match = -63.6%%
