--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-25 17:29:41
+lastsearch = 2024-07-26 06:30:03
 
 [en.wikipedia.org]
-match = -15.4%%
-title = Takeru Segawa
-url = https://en.wikipedia.org/wiki/Takeru_Segawa
+match = -45.5%%
+title = Tetsu Inada
+url = https://en.wikipedia.org/wiki/Tetsu_Inada
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0tcp02Jg&sig=ACfU3U3DHgBXFJFbSTl0nj7OP_53A8RR9A&hl=en&sa=X&ved=2ahUKEwimgav7_cGHAxWjEFkFHSGoBvUQ6AF6BAgaEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVMMWoZc&sig=ACfU3U3nv3sh0cUNfQvqvgYSbqFk5DntMA&hl=en&sa=X&ved=2ahUKEwiQg9CxrMOHAxVqMTQIHVqGC64Q6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Qisliq badimcani birde bu cur hazirlayin❗ SUPER RESSEPT ...
 url = https://www.youtube.com/watch?v=kIjdg0j4tA4
 
 [www.tiktok.com]
-match = 5.9%%
-title = Bqcd1oc6cbgsup ...
-url = https://www.tiktok.com/discover/bqcd1oc6cbgsup-4n3fxwtvns7xaijkhwfxb3rdhxcaakeq79jyur6qdg=
+match = 0.0%%
+title = This song 😫💔#chan🎵🎶🎧 | this song
+url = https://www.tiktok.com/@channnmusicc/video/7204044061546794267
 
 [www.psl.noaa.gov]
 match = -194.1%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -211.8%%
-title = Does JYP allow his artists to write down their own songs or ...
-url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
+match = -129.4%%
+title = Does KQ Entertainment treat their idols well?
+url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
