--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-26 04:55:40
+lastsearch = 2024-07-26 06:15:26
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -17.6%%
+title = HOA controlled by builder
+url = https://www.reddit.com/r/HOA/comments/16n0bic/hoa_controlled_by_builder/
 
 [www.quora.com]
 match = -182.4%%
