--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-26 05:25:04
+lastsearch = 2024-07-26 06:26:36
 
 [www.linkedin.com]
-match = -145.5%%
-title = Tam Tram - Kansas Army National Guard
-url = https://www.linkedin.com/in/tam-tram-a3286573
+match = -172.7%%
+title = Tam Tran - Wichita, Kansas, United States
+url = https://www.linkedin.com/in/tam-tran-0a0005213
 
 [sos.ks.gov]
 match = -9.1%%
@@ -47,9 +47,9 @@ title = Donate | ONE TAM
 url = https://secure.parksconservancy.org/site/Donation2?df_id=3940&3940.donation=form1&pw_id=1861
 
 [ultrarunning.com]
-match = -136.4%%
-title = Review: Speedland GS:TAM Trail Shoe
-url = https://ultrarunning.com/features/reviews/review-speedland-gstam-trail-shoe/
+match = -63.6%%
+title = Ultra Running Calendar
+url = https://ultrarunning.com/calendar/?refinementList[distances.group][0]=26-40 mi.&refinementList[distances.group][1]=41-60 mi.&refinementList[month_name][0]=04Apr&refinementList[month_name][1]=12Dec&hitsPerPage=24&page=37
 
 [www.quora.com]
 match = -145.5%%
@@ -152,9 +152,9 @@ title = Provider List - Leon County Clerk of Court and Comptroller
 url = https://cvweb.leonclerk.com/public/clerk_services/marriage/premarital_information/provider_list.asp
 
 [en.wikipedia.org]
-match = 27.3%%
-title = Tampa, Kansas
-url = https://en.wikipedia.org/wiki/Tampa,_Kansas
+match = 0.0%%
+title = Battle of Huế
+url = https://en.wikipedia.org/wiki/Battle_of_Huế
 
 [www.compass.com]
 match = -272.7%%
