--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-26 06:01:34
+lastsearch = 2024-07-26 06:16:51
 
 [shopee.vn]
 match = -87.5%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -33.3%%
-title = Thảm Bàn chân len mịn thấm hút tốt size 40*60cm. ĐTVM
-url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html
+match = -70.8%%
+title = Thảm chùi chân,LEN MỊN thảm lau chân chống trơn trượt ...
+url = https://www.lazada.vn/products/tham-chui-chanlen-min-tham-lau-chan-chong-tron-truot-hang-cao-cap-mau-moi-40-60cm-i1342643160.html?srsltid=AfmBOooV7T4mxxJ5ZzoqYbLmb6S7mW159YFuF_dGN38oYQkxu3eTSVuB
 
 [megahomevietnam.com]
 match = 20.0%%
