--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-26 04:25:30
+lastsearch = 2024-07-26 06:30:26
 
 [shopee.vn]
 match = -216.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [goiaura.com]
-match = 0.0%%
-title = Đệm Lót Ghế Mẫu 6
-url = https://goiaura.com/dem-lot-ghe-mau-6
+match = -16.7%%
+title = Đệm Lót Ghế Gỗ Mẫu 5
+url = https://goiaura.com/dem-trai-ghe-go-/dem-lot-ghe-go-mau-5
 
 [h5.lazada.vn]
 match = -175.0%%
@@ -42,9 +42,9 @@ title = GHẾ NỆM DỰA CAO CẤP 4000-913
 url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
-match = -216.7%%
-title = Mua Nệm ghế thảm ghế 2m4 x 60cm Màu đỏ hoàng gia
-url = https://tiki.vn/nem-ghe-tham-ghe-2m4-x-60cm-mau-do-hoang-gia-p87050602.html
+match = -200.0%%
+title = Nệm ghế,Thảm ghế gỗ loại 1m7x 55cm mẫu màu nâu
+url = https://tiki.vn/nem-ghe-tham-ghe-go-loai-1m7x-55cm-mau-mau-nau-p89638643.html?spid=141114686
 
 [suongtuyet.com]
 match = -133.3%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ SOFA TÂN CỔ ĐIỂN CĐ01 - Xuất khẩu
 url = https://nemkimcuong.vn/mienbac/vi/san-pham/bo-ghe-sofa-tan-co-dien-cd01-xuat-khau/
 
 [www.lazada.vn]
-match = -116.7%%
-title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
-url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
+match = -300.0%%
+title = Nệm ghế , thảm ghế hoàng gia đỏ các kích thước từ 1m7 x ...
+url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html
 
 [vn.my-best.com]
 match = -233.3%%
