--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-25 23:45:00
+lastsearch = 2024-07-26 06:57:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -49,7 +49,7 @@ url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap
 [pctravinh.evnspc.vn]
 match = -90.5%%
 title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
 
 [baoapbac.vn]
 match = -47.6%%
@@ -282,9 +282,9 @@ title = J2TEAM Community | #j2team_discussion
 url = https://m.facebook.com/groups/j2team.community/posts/2412634839068622/
 
 [thuvienphapluat.vn]
-match = -85.7%%
-title = Đề thi môn Ngữ văn kỳ thi tốt nghiệp THPT năm 2024
-url = https://thuvienphapluat.vn/cong-dong-dan-luat/de-thi-mon-ngu-van-ky-thi-tot-nghiep-thpt-nam-2024-214961.aspx
+match = -123.8%%
+title = Hướng dẫn đánh số trang văn bản theo Nghị định 30/2020 ...
+url = https://thuvienphapluat.vn/chinh-sach-phap-luat-moi/vn/ho-tro-phap-luat/tu-van-phap-luat/67791/huong-dan-danh-so-trang-van-ban-theo-nghi-dinh-30-2020-nd-cp
 
 [hungha.thaibinh.gov.vn]
 match = -109.5%%
@@ -620,4 +620,9 @@ url = https://biogreen-impexp.fr/5698170-chạy-cầu-dâm.html
 match = -138.1%%
 title = Thái Bình: Cháy xưởng sản xuất bật lửa gas, 12 công nhân ...
 url = https://baocaovien.vn/tin-tuc/thai-binh-chay-xuong-san-xuat-bat-lua-gas-12-cong-nhan-nhap-vien-cap-cuu/144249.html
+
+[www.sggp.org.vn]
+match = -76.2%%
+title = Mưa lũ gây thiệt hại nặng, giao thông ách tắc
+url = https://www.sggp.org.vn/mua-lu-gay-thiet-hai-nang-giao-thong-ach-tac-post751058.html
 
