--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-26 02:15:58
+lastsearch = 2024-07-26 06:48:16
 
 [silverwow.net]
 match = -255.6%%
@@ -62,9 +62,9 @@ title = Mikawaya Edomae Toro-chan 6.6 lbs (3 kg) (500 g) x 6 Packs ...
 url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B01APABNVO
 
 [unistrutohio.com]
-match = -511.1%%
-title = Unistrut P1000 - 1-5/8" x 1-5/8", 12 Gauge Channel, Metal ...
-url = https://unistrutohio.com/products/p1000
+match = -466.7%%
+title = Unistrut P1001 - 1-5/8" x 3-1/4", 12 Gauge Back-to- ...
+url = https://unistrutohio.com/products/p1001
 
 [scholar.google.co.uk]
 match = 0.0%%
@@ -97,9 +97,9 @@ title = Cheong Chan Elephant Cooking Caramel Sauce 3kg ...
 url = https://www.supplybunny.com/en/products/cheong-chan-elephant-cooking-caramel-sauce-3kg-bottle-6-bottles-per-carton
 
 [shopee.com.my]
-match = -344.4%%
-title = Cheong Chan Cooking Caramel 3kg - Dark Soy Sauce
-url = https://shopee.com.my/Cheong-Chan-Cooking-Caramel-3kg-Dark-Soy-Sauce-i.219216172.24479196450
+match = -177.8%%
+title = Cheong Chan Cooking Caramel : 3kg
+url = https://shopee.com.my/Cheong-Chan-Cooking-Caramel-3kg-i.451025624.5793405457
 
 [www.ttbsupplies.com]
 match = -422.2%%
