--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-26 06:22:40
+lastsearch = 2024-07-26 06:44:51
 
 [shopee.vn]
 match = 0.0%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA
 [www.lazada.vn]
 match = -11.1%%
 title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html
+url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html?srsltid=AfmBOoqzoZfLxNNYtOQuAuN7SC309SNlHMi0WjTjhJ2C2hykOw4ryMas
 
 [tiki.vn]
 match = 7.4%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=cJu6tFJe_Gc
 [www.diepxuan.com]
 match = 22.2%%
 title = Chăn tuyết Thái Lan 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html
+url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html?srsltid=AfmBOop0Ly9EJndsJQiF8bgRRVaXdd2qN8FXHWMNYEXZVhsnFlJjgVxl
 
 [sanhangre.net]
 match = -33.3%%
@@ -149,7 +149,7 @@ url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOoq4PvAZQw-x-ato2u3bWDx9WGgKxcaTkVINnC_czTyRMakyxVmV
 
 [vnvc.vn]
 match = -59.3%%
