--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-26 05:26:47
+lastsearch = 2024-07-26 06:46:51
 
 [tiki.vn]
 match = -133.3%%
@@ -72,9 +72,9 @@ title = Chăn cứu hỏa, chăn chiên chữa cháy chất lượng #1 có ...
 url = https://thietbicuuhoa.vn/chan-cuu-hoa/
 
 [yuki.edu.vn]
-match = -200.0%%
-title = Chăn lông cừu Queen màu Đỏ ruby ( Đỏ Đô ) Nanara Nhật Bản
-url = https://yuki.edu.vn/sanpham/chan-long-cuu-queen-mau-do-ruby/
+match = -126.7%%
+title = chăn lông cừu yuki japan thu đông màu vàng đậm
+url = https://yuki.edu.vn/sanpham/chan-long-cuu-yuki-japan-thu-dong-mau-vang-dam/
 
 [cloudlux.com.vn]
 match = -46.7%%
