--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-26 05:31:19
+lastsearch = 2024-07-26 06:50:41
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -150.0%%
-title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
-url = https://www.facebook.com/sieuthinem267/
+match = -133.3%%
+title = Siêu Thị Nệm - Nệm gấp 3 cao su tổng hợp Thái Lan ...
+url = https://www.facebook.com/sieuthinem/posts/nệm-gấp-3-cao-su-tổng-hợp-thái-lan-khuyến-mãi-giảm-giá-đặc-biệt-tại-wwwnemvn1giả/2342249222605666/
 
 [voz.vn]
 match = 11.1%%
@@ -185,4 +185,9 @@ url = https://www.pge.com/en/account/billing-and-assistance/understand-your-bill
 match = 0.0%%
 title = ANTA Việt Nam
 url = https://anta.com.vn/
+
+[fptshop.com.vn]
+match = -161.1%%
+title = Hướng dẫn cách làm bánh đa nem thơm ngon, giòn rụm, ...
+url = https://fptshop.com.vn/tin-tuc/dien-may/cach-lam-banh-da-nem-175898
 
