CI images update

--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-26 06:52:03
+lastsearch = 2024-07-26 08:03:24
 
 [chieutruc.info]
 match = -60.0%%
@@ -87,8 +87,8 @@ title = Xây dựng thương hiệu, đưa sản phẩm chiếu trúc Cao ...
 url = https://nhandan.vn/xay-dung-thuong-hieu-dua-san-pham-chieu-truc-cao-bang-vuon-xa-post729580.html
 
 [chieu.com.vn]
-match = 42.1%%
-title = Chiếu Trúc Cao Bằng
+match = -28.0%%
+title = Chiếu Trúc Cao Bằng - Tổng Kho Chiếu Trúc Miền Bắc
 url = https://chieu.com.vn/chieu-truc/chieu-truc-cao-bang
 
 [moitruong.net.vn]
@@ -182,9 +182,9 @@ title = ĐỊA CHỈ MUA CHIẾU TRÚC CAO SƠN TẠI HCM
 url = http://www.chieutretruc.com/2017/12/dia-chi-mua-chieu-truc-cao-son-tai-hcm.html
 
 [www.lazada.vn]
-match = -20.0%%
-title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè
-url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html
+match = -84.0%%
+title = Chiếu trúc tăm vân gỗ in hoa đế lụa, chiếu trúc tây bắc, cao ...
+url = https://www.lazada.vn/products/chieu-truc-tam-van-go-in-hoa-de-lua-chieu-truc-tay-bac-cao-bang-dieu-hoa-mat-lanh-nhieu-size1m21m51m61m8-i2241942505.html
 
 [www.sendo.vn]
 match = -52.0%%
