--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-26 06:44:51
+lastsearch = 2024-07-26 08:08:53
 
 [shopee.vn]
 match = 0.0%%
@@ -23,8 +23,8 @@ url = https://tiki.vn/search?q=chăn lông 4 kg
 
 [h5.lazada.vn]
 match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
-url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [tienphong.vn]
 match = 3.7%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=cJu6tFJe_Gc
 [www.diepxuan.com]
 match = 22.2%%
 title = Chăn tuyết Thái Lan 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html?srsltid=AfmBOop0Ly9EJndsJQiF8bgRRVaXdd2qN8FXHWMNYEXZVhsnFlJjgVxl
+url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html
 
 [sanhangre.net]
 match = -33.3%%
@@ -149,7 +149,7 @@ url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOoq4PvAZQw-x-ato2u3bWDx9WGgKxcaTkVINnC_czTyRMakyxVmV
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [vnvc.vn]
 match = -59.3%%
