--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-26 06:58:58
+lastsearch = 2024-07-26 07:58:17
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
+match = -73.9%%
+title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
+url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [m.facebook.com]
 match = -13.0%%
@@ -32,9 +32,9 @@ title = Chiếu Cói ❤️FREESHIP❤️Chiếu Thái Bình In Hoa 0,8/ ...
 url = https://www.lazada.vn/products/chieu-coi-freeshipchieu-thai-binh-in-hoa-081m21m51m61m82m2-i2001525909.html
 
 [www.sendo.vn]
-match = -34.8%%
-title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
-url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
+match = 30.4%%
+title = Chiếu nhựa thái bình 1m x 1m9 - chieu
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
 
 [www.facebook.com]
 match = -30.4%%
@@ -42,9 +42,9 @@ title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
 url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
 
 [www.yellowpages.vn]
-match = 15.8%%
-title = sản xuất chiếu nhựa
-url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
+match = 60.9%%
+title = chiếu nhựa ở tại thái bình
+url = https://www.yellowpages.vn/class/490435/chiếu-nhựa-ở_thái-bình.html
 
 [websosanh.vn]
 match = -73.9%%
