--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-26 05:39:28
+lastsearch = 2024-07-26 08:11:57
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 9.7%%
-title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
-url = https://www.sendo.vn/chieu-truc-hat.htm
+match = 54.8%%
+title = chiếu trúc hạt quế lâm hoa m8 - hjhgt
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m8-29675515.html
 
 [www.lazada.vn]
 match = 16.1%%
