CI images update

--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-26 03:26:22
+lastsearch = 2024-07-26 09:05:19
 
 [everon.online]
-match = -32.4%%
-title = 4 – Everon Tân Mai | Tổng Đại Lý Chăn Ga Gối Đệm Everon ...
-url = https://everon.online/blogs/video/4
+match = 50.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-23035 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est23035.html
+title = Everon EPM-24060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
 
 [nem.vn]
 match = 5.9%%
@@ -130,4 +130,9 @@ url = https://everon.com/danh-muc-san-pham/bo-chan-ga
 match = 2.9%%
 title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
 url = https://songhong.info/chan-ga-goi-bc29
+
+[demchinhhang.com]
+match = 52.2%%
+title = Bộ ga chun chần bốn mùa
+url = https://demchinhhang.com/collections/bo-ga-chun-chan
 
