--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-26 08:01:24
+lastsearch = 2024-07-26 09:03:42
 
 [burningman.org]
 match = 0.0%%
@@ -82,8 +82,8 @@ title = Bulova Official Site | Bulova
 url = https://www.bulova.com/us/en/
 
 [www.ksat.com]
-match = -57.1%%
-title = KSAT 12
+match = -233.3%%
+title = San Antonio News, Texas News, Sports, Weather from KSAT ...
 url = https://www.ksat.com/
 
 [marijuana-anonymous.org]
